--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="main-content">
         <header class="text-center">
             
-                <img src= images/post004GAN2_700.pmg class="Rounded Corners text-center index-image">
+                <img src= images/post004GAN2_700.jpg class="Rounded Corners text-center index-image">
             
             <h1 class="index-title">メディアアート勉強会</h1>
         </header>
