--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet">
 
 	
-	<link rel="stylesheet" href="https://mediaartresearchers.github.io/site/css/medium.73abe1dd237bbfda4098499ec4c303329ab1f10ad6d7d3d8fa7a1c13ea34d3e4.css" integrity="sha256-c6vh3SN7v9pAmEmexMMDMpqx8QrW19PY&#43;nocE&#43;o00&#43;Q=">
+	<link rel="stylesheet" href="https://mediaartresearchers.github.io/site/css/medium.a3d5489836b19de22a81ddc6bd21c17547d07529e67b266427378a04fa3ea727.css" integrity="sha256-o9VImDaxneIqgd3GvSHBdUfQdSnmeyZkJzeKBPo&#43;pyc=">
 
 	
 	<link rel="stylesheet" href="https://mediaartresearchers.github.io/site/css/additional.f303905c1f454cb2c7e96aaa57fc15ca87250f2d502127ea5d924b9cb3e9dac9.css" integrity="sha256-8wOQXB9FTLLH6WqqV/wVyoclDy1QISfqXZJLnLPp2sk=">
